[gd_scene load_steps=3 format=3 uid="uid://jsd763hsqsc6"]

[ext_resource type="Script" uid="uid://dy6j4n0k5di73" path="res://addons/dialogue_editor/topic_graphnode.gd" id="1_vgfcm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7b32"]
bg_color = Color(0.0621247, 0.0558254, 0.114689, 1)

[node name="Topic GraphNode" type="GraphNode"]
offset_right = 470.0
offset_bottom = 223.0
rotation = 0.000167007
theme_override_styles/panel_selected = SubResource("StyleBoxFlat_y7b32")
resizable = true
title = "Topic"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color(1, 1, 1, 1)
slot/8/left_icon = null
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color(1, 1, 1, 1)
slot/8/right_icon = null
slot/8/draw_stylebox = true
slot/9/left_enabled = false
slot/9/left_type = 0
slot/9/left_color = Color(1, 1, 1, 1)
slot/9/left_icon = null
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color(1, 1, 1, 1)
slot/9/right_icon = null
slot/9/draw_stylebox = true
script = ExtResource("1_vgfcm")

[node name="Topic Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HFlowContainer" type="VBoxContainer" parent="Topic Container"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Topic Container/HFlowContainer"]
layout_mode = 2
theme_override_constants/margin_right = 115

[node name="Label" type="Label" parent="Topic Container/HFlowContainer/MarginContainer"]
layout_mode = 2
text = "Prompt"

[node name="TopicPrompt" type="TextEdit" parent="Topic Container/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 48)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Topic Container"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Responses" type="Label" parent="Topic Container/MarginContainer"]
layout_mode = 2
text = "Responses"

[node name="HSeparator" type="HSeparator" parent="."]
modulate = Color(0.509286, 0.509286, 0.509286, 1)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Flag Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Flag Container"]
layout_mode = 2
text = "Flags"

[node name="StartingTopic_Flags" type="MarginContainer" parent="Flag Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_right = 115

[node name="Panel" type="Panel" parent="Flag Container/StartingTopic_Flags"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Flag Container/StartingTopic_Flags"]
layout_mode = 2

[node name="Goodbye" type="CheckBox" parent="Flag Container/StartingTopic_Flags/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Goodbye"

[node name="Random" type="CheckBox" parent="Flag Container/StartingTopic_Flags/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Random"

[node name="Greeting_Flags" type="Control" parent="Flag Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Exclusive" type="CheckBox" parent="Flag Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PriorityNumber" type="SpinBox" parent="Flag Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="."]
modulate = Color(0.509286, 0.509286, 0.509286, 1)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator5" type="HSeparator" parent="."]
modulate = Color(1, 1, 1, 0.0862745)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Conditions Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Conditions Container"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Conditions Container/MarginContainer"]
visible = false
layout_mode = 2

[node name="ConditionsLabelHBox" type="HBoxContainer" parent="Conditions Container/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Conditions Container/MarginContainer/ConditionsLabelHBox"]
layout_mode = 2
text = "   Conditions   "

[node name="AddCondition" type="Button" parent="Conditions Container/MarginContainer/ConditionsLabelHBox"]
layout_mode = 2
text = " + "

[node name="ConditionListContainer" type="VBoxContainer" parent="Conditions Container"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="."]
modulate = Color(1, 1, 1, 0.0862745)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Functions Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Functions Container"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Functions Container/MarginContainer"]
visible = false
layout_mode = 2

[node name="FunctionsLabelHBox" type="HBoxContainer" parent="Functions Container/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Functions Container/MarginContainer/FunctionsLabelHBox"]
layout_mode = 2
text = "   Functions   "

[node name="AddFunction" type="Button" parent="Functions Container/MarginContainer/FunctionsLabelHBox"]
layout_mode = 2
text = " + "

[node name="FunctionListContainer" type="VBoxContainer" parent="Functions Container"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="."]
modulate = Color(1, 1, 1, 0.0862745)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "delete"

[connection signal="text_changed" from="Topic Container/HFlowContainer/TopicPrompt" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Conditions Container/MarginContainer/ConditionsLabelHBox/AddCondition" to="." method="_on_add_condition_pressed"]
[connection signal="pressed" from="Functions Container/MarginContainer/FunctionsLabelHBox/AddFunction" to="." method="_on_add_function_pressed"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
